modularize kotlin with zilla manager